<resources>
    <string name="app_name">Life Journey</string>
    <string name="entries">Entries</string>
    <string name="calendar">Calendar</string>
    <string name="mood">Mood</string>
    <string name="fab_content_desc">New Entry</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="tick">Tick</string>
    <string name="discard">Discard</string>
    <string name="discard_title">Discard changes?</string>
    <string name="discard_supporting_text">All unsaved changes will be lost.</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_supporting_text">This entry will be permanently deleted.</string>
    <string name="delete_image_supporting_text">This image will be permanently deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="very_good_mood_wrap">VERY\nGOOD</string>
    <string name="very_good_mood">VERY GOOD</string>
    <string name="good_mood">GOOD</string>
    <string name="neutral_mood">NEUTRAL</string>
    <string name="bad_mood">BAD</string>
    <string name="very_bad_mood">VERY BAD</string>
    <string name="very_bad_mood_wrap">VERY\nBAD</string>
    <string name="entry_hint">Write here...</string>
    <string name="no_entry">No Entry Found!</string>
    <string name="empty_input_error">Enter some text!</string>
    <string name="month_mood">Mood of the Month:</string>
    <string name="camera">Camera</string>
    <string name="journal_updated">Changes Saved!</string>
    <string name="journal_added">Journal Added!</string>
    <string name="journal_deleted">Journal Deleted!</string>
</resources>