<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryDetailsActivity">

    <ImageButton
    android:id="@+id/back_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:src="@drawable/ic_back_24"
    android:contentDescription="@string/back"
    style="?android:attr/borderlessButtonStyle"
    android:layout_margin = "10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_delete_24"
        android:contentDescription="@string/delete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_edit_24"
        android:contentDescription="@string/tick"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        />

    <TextView
        android:id="@+id/entry_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:text = "12 October 2020"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        />

    <TextView
        android:id="@+id/entry_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text = "6:56pm"
        app:layout_constraintStart_toStartOf="@id/entry_date_text"
        app:layout_constraintTop_toBottomOf="@id/entry_date_text"
        />

    <ImageView
        android:id="@id/entry_mood_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        tools:srcCompat = "@drawable/ic_very_good_mood_24"
        android:contentDescription="@string/mood"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="@id/entry_mood_text"
        app:layout_constraintBottom_toBottomOf="@id/entry_mood_text"
        app:layout_constraintEnd_toStartOf="@id/entry_mood_text"
        />

    <TextView
        android:id="@+id/entry_mood_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:text = "Very Good"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/entry_date_text"
        app:layout_constraintBottom_toBottomOf="@id/entry_time_text"
        />


    <TextView
        android:id="@+id/entry_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="start|top"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        tools:text="@string/app_name"
        android:scrollbars = "vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/entry_time_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/entry_time_text"
        app:layout_constraintEnd_toEndOf="@id/entry_mood_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>