<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_check_24"
        android:contentDescription="@string/tick"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/discard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_close_24"
        android:contentDescription="@string/discard"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/date_input"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:text= "12/10/2020"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_calendar_24"
        app:iconPadding="10dp"
        app:layout_constraintTop_toTopOf="@id/mood_input"
        app:layout_constraintBottom_toBottomOf="@id/mood_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_input"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/time_input"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:text= "12:30pm"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_time_24"
        app:iconPadding="10dp"
        app:layout_constraintTop_toTopOf="@id/mood_input"
        app:layout_constraintBottom_toBottomOf="@id/mood_input"
        app:layout_constraintStart_toEndOf="@id/date_input"
        app:layout_constraintEnd_toStartOf="@id/mood_input"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:id="@+id/mood_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text= "Very\nGOOD"
        android:textColor="@android:color/black"
        app:icon="@drawable/ic_very_good_mood_24"
        app:iconPadding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/finish_button"
        app:layout_constraintStart_toEndOf="@id/time_input"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/content_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/entry_hint"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/time_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>