<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_previous_24"
        android:contentDescription="@string/previous"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toTopOf="@id/month_text"
        app:layout_constraintBottom_toBottomOf="@id/month_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/month_text"
        />

    <TextView
        android:id="@+id/month_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "October 2020"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mood_chart_container"
        app:layout_constraintStart_toEndOf="@id/previous_button"
        app:layout_constraintEnd_toStartOf="@id/next_button"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_next_24"
        android:contentDescription="@string/next"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin = "10dp"
        app:layout_constraintStart_toEndOf="@id/month_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/month_text"
        app:layout_constraintBottom_toBottomOf="@id/month_text"
        />

    <include
        layout="@layout/layout_no_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/month_text"
        app:layout_constraintBottom_toBottomOf="@id/mood_chart_container"
        app:layout_constraintStart_toStartOf="@id/mood_chart_container"
        app:layout_constraintEnd_toEndOf="@id/mood_chart_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mood_chart_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/month_text"
        app:layout_constraintBottom_toTopOf="@id/horizontal_line"
        >

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/mood_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        layout="@layout/layout_fab_newentry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        app:layout_constraintBottom_toTopOf="@id/horizontal_line"/>

    <TextView
        android:id="@+id/month_mood_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/month_mood"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        app:layout_constraintBottom_toTopOf="@id/mood_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/mood_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:layout_marginVertical="20dp"
        tools:srcCompat = "@drawable/ic_very_good_mood_24"
        app:layout_constraintTop_toBottomOf="@id/month_mood_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/month_mood_text"
        app:layout_constraintEnd_toEndOf="@id/month_mood_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>